--- a/web/css/graphs.css
+++ b/web/css/graphs.css
@@ -16,7 +16,7 @@
 .graph-overview-date-label {
   font-size: 20px;
   font-weight: strong;
-  fill: #333;
+  fill: white;
 }
 
 .spiderweb-container,
