--- a/web/style.css
+++ b/web/style.css
@@ -841,12 +841,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 15px;
+  padding: 10px;
   margin-bottom: 10px;
   background: rgba(255, 255, 255, 0.02);
   border-radius: 4px;
   border: 1px solid var(--pico-muted-border-color);
   transition: all 0.2s ease;
+  column-gap: 10px;
 }
 
 .pill-order-item:hover {
